fix issue with text going off screen during window minimization

--- a/services_tab/services_auxiliary.css
+++ b/services_tab/services_auxiliary.css
@@ -25,18 +25,14 @@
 }
 
 .blue-main p{
-    position: absolute;
+    position: relative;
     display: inline-block;
-    transform: rotate(357deg);
-    top: 110px;
-    left: 740px;
+    transform: rotate(353deg);
+    top: -80px;
+    left: 290px;
     font-size: 45px;
-}
-
-.blue-main img{
-    width: 550px;
-    margin-left: 390px;
-    margin-top: -100px;
+    border: 15px solid white;
+    padding: 30px;
 }
 
 .blue-main a{
@@ -54,3 +50,14 @@
     font-size: 45px;
 }
 
+@media (max-width: 768px){
+    .blue-main p{
+        font-size: 30px;
+        top: 10px;
+        padding: 15px;
+    }
+
+    .blue-main a{
+        font-size: 30px;
+    }
+}
